--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@
 <title>Redirecting to https://pwning.net/</title>
 <meta http-equiv="refresh" content="0; URL=https://pwning.net/">
 <link rel="canonical" href="https://pwning.net/">
+<body>
+  <p>This page has moved to a <a href="https://pwning.net/">pwning.net</a>.</p>
+</body>
+
